<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/mainActivity">

    <Button
        android:layout_width="@dimen/btn_wide_width"
        android:layout_height="@dimen/btn_heigth"
        android:text="@string/btn_new_item"
        android:id="@+id/btnCreateItem"
        android:layout_marginTop="@dimen/margin_top_screen"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/btn_text_size" />

    <Button
        android:layout_width="@dimen/btn_wide_width"
        android:layout_height="@dimen/btn_heigth"
        android:text="@string/btn_drills_list"
        android:id="@+id/btnDrillsList"
        android:layout_marginTop="@dimen/btn_top_margin"
        android:layout_below="@+id/btnCreateItem"
        android:layout_centerHorizontal="true"
        android:longClickable="true"
        android:textSize="@dimen/btn_text_size" />

    <Button
        android:layout_width="@dimen/btn_wide_width"
        android:layout_height="@dimen/btn_heigth"
        android:text="@string/btn_create_drill"
        android:id="@+id/btnCreateDrill"
        android:layout_marginTop="@dimen/btn_top_margin"
        android:layout_below="@+id/btnDrillsList"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/btn_text_size" />

    <Button
        android:layout_width="@dimen/btn_wide_width"
        android:layout_height="@dimen/btn_heigth"
        android:text="@string/btn_register"
        android:id="@+id/btnRegister"
        android:layout_below="@+id/btnCreateDrill"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/btn_top_margin"
        android:textSize="@dimen/btn_text_size" />

    <Button
        android:layout_width="@dimen/btn_wide_width"
        android:layout_height="@dimen/btn_heigth"
        android:text="@string/btn_login"
        android:id="@+id/btnLogIn"
        android:layout_below="@+id/btnRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/btn_top_margin"
        android:textSize="@dimen/btn_text_size" />

    <Button
        android:layout_width="@dimen/btn_wide_width"
        android:layout_height="@dimen/btn_heigth"
        android:text="@string/btn_exit"
        android:id="@+id/btnExit"
        android:layout_below="@+id/btnLogIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/btn_top_margin"
        android:textSize="@dimen/btn_text_size" />
</RelativeLayout>
