<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.piotr.piotr.vocabtrainer.DrillCreation"
    android:id="@+id/DrillCreation">
    <EditText
        android:layout_width="@dimen/edit_text_new_item"
        android:layout_height="wrap_content"
        android:id="@+id/editTextDrillName"
        android:layout_marginTop="@dimen/margin_top_screen"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/drill_name"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_item"
        android:id="@+id/textViewSelectItems"
        android:layout_below="@+id/editTextDrillName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/horizontalScrollView"
        android:layout_marginTop="2dp">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:layout_alignParentLeft="true"
        />

    <TextView
        android:id="@+id/textViewSingleItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:gravity="bottom"
        android:layout_toRightOf="@+id/checkBox"/>


    </LinearLayout>



    <Button
        android:layout_width="@dimen/btn_three_in_line_width"
        android:layout_height="@dimen/btn_heigth"
        android:text="@string/btn_create_drill_add_items"
        android:id="@+id/btnCreateDrillAddItems"
        android:textSize="@dimen/btn_text_size"
        android:layout_above="@+id/createDrillSave"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="@dimen/btn_three_in_line_width"
        android:layout_height="@dimen/btn_heigth"
        android:text="@string/btnCreateDrillClear"
        android:id="@+id/btnCreateDrillClear"
        android:textSize="@dimen/btn_text_size"
        android:layout_alignTop="@+id/btnCreateDrillAddItems"
        android:layout_alignLeft="@+id/horizontalScrollView"
        android:layout_alignStart="@+id/horizontalScrollView" />

    <Button
        android:layout_width="@dimen/btn_three_in_line_width"
        android:layout_height="@dimen/btn_heigth"
        android:text="@string/btn_create_drill_schedule"
        android:id="@+id/btnCreateDrillSetReminder"
        android:textSize="@dimen/btn_text_size"
        android:padding="@dimen/btn_padding_zero"
        android:layout_alignTop="@+id/btnCreateDrillAddItems"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="@dimen/btn_one_centered"
        android:layout_height="@dimen/btn_heigth"
        android:text="@string/btn_create_drill_save"
        android:id="@+id/createDrillSave"
        android:textSize="@dimen/btn_text_size"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp" />

    <HorizontalScrollView
        android:layout_width="@dimen/scroll_view_width"
        android:layout_height="24dp"
        android:id="@+id/horizontalScrollView"
        android:layout_below="@+id/textViewSelectItems"
        android:layout_alignLeft="@+id/editTextDrillName"
        android:layout_alignStart="@+id/editTextDrillName" >


    </HorizontalScrollView>




</RelativeLayout>
