<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.piotr.piotr.vocabtrainer.ItemCreation"
    android:id="@+id/itemCreation">

    <Button
        android:layout_width="@dimen/btn_two_in_line"
        android:layout_height="@dimen/btn_heigth"
        android:text="@string/btn_save_new_item"
        android:id="@+id/btnCreateNewItem"
        android:typeface="normal"
        android:textSize="@dimen/btn_text_size"
        android:layout_alignTop="@+id/btnClearNewItem"
        android:layout_alignRight="@+id/editTextCreateItemTranslate"
        android:layout_alignEnd="@+id/editTextCreateItemTranslate" />

    <Button
        android:layout_width="@dimen/btn_two_in_line"
        android:layout_height="@dimen/btn_heigth"
        android:text="@string/btn_clear_create_new_item"
        android:id="@+id/btnClearNewItem"
        android:textSize="@dimen/btn_text_size"
        android:layout_below="@+id/editTextCreateItemTranslate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="@dimen/edit_text_new_item"
        android:layout_height="wrap_content"
        android:id="@+id/editTextCreateItemTranslate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top_edit_text_new_item_translate"
        android:layout_below="@+id/editTextCreateItem"
        android:hint="@string/editTextCreateNewItemTranslateHint"
        android:lines="5"
        android:longClickable="true"
        android:gravity="top"
        android:background="#643c739e"
        android:padding="5dp" />

    <EditText
        android:layout_width="@dimen/edit_text_new_item"
        android:layout_height="wrap_content"
        android:id="@+id/editTextCreateItem"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top_screen"
        android:lines="5"
        android:hint="@string/edit_text_new_item_hint"
        android:gravity="top"
        android:background="#643c739e"
        android:padding="5dp" />

</RelativeLayout>
